--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "NODE_ENV=development ts-node-dev --ignore-watch node_modules --transpile-only src/start.ts",
     "format": "prettier --write src/**/*.ts{,x}",
     "build": "npx rimraf dist && tsc -p tsconfig.build.json",
-    "start": "NODE_ENV=production node dist/start.js"
+    "start": "NODE_ENV=production node dist/start.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
