--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "format": "prettier --write src/**/*.ts{,x}",
     "build": "npx rimraf dist && tsc -p tsconfig.build.json",
     "start": "NODE_ENV=production node dist/start.js",
-    "test": "jest"
+    "test": "yarn test:e2e",
+    "test:unit": "NODE_ENV=test jest",
+    "test:e2e": "NODE_ENV=test cucumber-js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^8.9.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
@@ -27,6 +30,7 @@
     "prettier": "^2.8.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
